Safari video z-index fix

--- a/assets/custom.scss
+++ b/assets/custom.scss
@@ -86,6 +86,7 @@ a:active {
     padding: 20px 20px 20px 40px;
     // border: 1px solid #666;
     background: #2b2b2b;
+    z-index: 9999;
   }
 }
 
@@ -235,8 +236,12 @@ a:active {
 
 .project__hero-media,
 .hero-media {
+  position: relative;
   width: 100%;
-  height: auto;
+  height: 100%;
+  z-index: -1;
+  object-fit: cover;
+  -webkit-transform-style: preserve-3d; /* iPhone z-index fix */
 }
 
 .project__heading {
@@ -332,13 +337,13 @@ a:active {
 }
 .home__hero-banner .hero-media {
   position: absolute;
-  z-index: 0;
   object-fit: cover;
   width:100%;
   height:100%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  -webkit-transform-style: preserve-3d;
 }
 
 .j-k-homes .page-content {
